ingress/adguard.anton.local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
  annotations:
    spec.ingressClassName: "traefik"
spec:
  rules:
  - host: adguard.anton.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-svc
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: adguard-svc
            port:
              number: 80
