ingress/plex.anton.local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: plex.anton.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
    - host: xteve.anton.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xteve
                port:
                  number: 34400
